fixed shaggy man display issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -66,22 +66,22 @@ aside {
 	background-color: lightcyan;
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: space-evenly;
+	justify-content:space-evenly;
 	margin-bottom: 3em;
 	padding-bottom: 1.5em;
 }
 
 .friend {
 	text-align: center;
-	max-width: 200px;
-	height: 200px;
-	overflow: hidden;
+	max-width: 600px;
+	height: 600px;
+	overflow:initial;
 }
 
 .friend img {
-	width: 100%;
-	height: auto;
-}
+	width: 200px;
+	height: 200px;
+	}
 
 
 
