Fixed indentation and missing /div

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,7 +20,7 @@ nav ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 1em;
-	overflow: visible;
+	overflow: hidden;
 	background-color: rgb(100, 128, 128);
 	display: flex;
 	justify-content: flex-end; 
